Fixed layout - removed borders, centered content, improved spacing

--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -18,19 +18,16 @@ img {
     background-color: transparent;
 }
 body{
-    background-image: url(ba.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    
+    background-color: #f5f5f5;
+    background-image: none;
+    min-height: 100vh;
 }
 .container-fluid{
     width: 100%;
     height: auto;
-    border: 1px solid black;
     padding: 0px;
     overflow-x: hidden;
+    background-color: white;
 }
 
 /* Mobile First Responsive Base */
@@ -327,16 +324,15 @@ body{
 /* BOX COMPLETE */
 .point{
     width: 100%;
-    height: 200px;
-    /* border: 1px solid black; */
+    height: auto;
+    min-height: 200px;
     background-color: transparent;
+    padding: 20px 0;
 }
 .point-1{
     width: 300px;
     height: 200px;
-    margin-left: 650px;
-    /* border: 1px solid black; */
-    
+    margin: 0 auto;
 }
 .point-1 img{
     width: 300px;
@@ -452,14 +448,15 @@ body{
 
 .images{
     width: 100%;
-    height: 870px;
-    border: 1px solid black ;
+    height: auto;
+    min-height: 500px;
     text-align: center;
     background-color: #c7c7c7;
+    padding: 40px 20px;
 }
 .images h2{
     font-size: 30px;
-    margin-top: -10px;
+    margin-top: 10px;
     color: rgb(239, 191, 4);
 }
 .row{
@@ -472,14 +469,15 @@ body{
 }
 .choises{
     width: 100%;
-    height: 460px;
-    border: 1px solid black;
-    background-color: #c7c7c7;
-    /* text-align: center; */
+    height: auto;
+    min-height: 300px;
+    background-color: #f8f9fa;
+    padding: 40px 20px;
 }
 .choises p{
     font-size: 15px;
-    margin-left:100px;
+    margin-left: 20px;
+    text-align: left;
 }
 
 /* Images and Choices Mobile Responsive */
@@ -656,21 +654,25 @@ body{
 }
 .picture{
     width: 100%;
-    height: 500px;
-    border: 1px solid black;
-    background-color: black;
+    height: auto;
+    min-height: 400px;
+    background-color: #1a1a1a;
     display: flex;
-    padding: 80px;
+    flex-wrap: wrap;
+    padding: 40px 20px;
+    justify-content: center;
 }
 .picture-1{
     width: 250px;
-    height: 200px;
+    height: auto;
+    min-height: 200px;
     border: 1px solid white;
-    margin: 50px;
+    margin: 20px;
     color: white;
+    padding: 15px;
 }
 .picture-1 p{
-margin-left: 5px;
+    margin-left: 5px;
 }
 
 /* Mobile Gallery Side Slider */
